# aoc-2024

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  newday.py  vcpkg-configuration.json  vcpkg.json
2024/: CMakeLists.txt
2024/src/: main.cpp
aoc/: CMakeLists.txt
aoc/session/: CMakeLists.txt
aoc/session/include/aoc/: session.h
aoc/session/src/: aoc_session.cpp
aoc/utils/: CMakeLists.txt
aoc/utils/include/aoc/: utils.h
aoc/utils/include/aoc/utils/: istream_extract.h  linewrapper.h  print.h
aoc/utils/src/: aoc_utils_linewrapper.cpp
aoc_session/: CMakeLists.txt
aoc_session/src/: aoc_session.cpp
cmake/: helpers.cmake  sanitize.cmake  static_analysis.cmake
cmake/presets/: osx.clang.json  wasm32.json
cmake/presets/base/: osx.json
day01/: CMakeLists.txt  day01.txt
day01/main/: CMakeLists.txt
day01/main/src/: day01_main.cpp
day01/solution/include/: day01_solution.h
day01/solution/src/: day01_solution.cpp
day01/visualization/: CMakeLists.txt  day01_visualization.rc
day01/visualization/src/: constants.h  custom_imconfig.h  day01_visualization.cpp  day01_visualization.h  imgui_glfw3_opengl3.cpp
day02/: CMakeLists.txt  day02.txt
day02/main/src/: day02_main.cpp
day02/solution/include/: day02_solution.h
day02/solution/src/: day02_solution.cpp
day02/visualization/: CMakeLists.txt
day03/: CMakeLists.txt
day03/main/src/: day03_main.cpp
day03/solution/include/: day03_solution.h
day03/solution/src/: day03_solution.cpp
day04/: CMakeLists.txt
day04/main/src/: day04_main.cpp
day04/solution/include/: day04_solution.h
day04/solution/src/: day04_solution.cpp
day05/: CMakeLists.txt
day05/main/src/: day05_main.cpp
day05/solution/: CMakeLists.txt
day05/solution/include/: day05_solution.h
day05/solution/src/: day05_solution.cpp
day06/: CMakeLists.txt
day06/main/src/: day06_main.cpp
day06/solution/include/: day06_solution.h
day06/solution/src/: day06_solution.cpp
day07/: CMakeLists.txt
day07/main/src/: day07_main.cpp
day07/solution/: CMakeLists.txt
day07/solution/include/: day07_solution.h
day07/solution/src/: day07_solution.cpp
day08/: CMakeLists.txt
day08/main/: CMakeLists.txt
day08/main/src/: day08_main.cpp
day08/solution/: CMakeLists.txt
day08/solution/include/: day08_solution.h
day08/solution/src/: day08_solution.cpp
day09/: CMakeLists.txt
day09/main/src/: day09_main.cpp
day09/solution/include/: day09_solution.h
day09/solution/src/: day09_solution.cpp
day10/: CMakeLists.txt
day10/main/src/: day10_main.cpp
day10/solution/include/: day10_solution.h
day10/solution/src/: day10_solution.cpp
day11/: CMakeLists.txt
day11/main/src/: day11_main.cpp
day11/solution/include/: day11_solution.h
day11/solution/src/: day11_solution.cpp
day12/: CMakeLists.txt
day12/main/src/: day12_main.cpp
day12/solution/include/: day12_solution.h
day12/solution/src/: day12_solution.cpp
day13/: CMakeLists.txt
day13/main/: CMakeLists.txt
day13/main/src/: day13_main.cpp
day13/solution/include/: day13_solution.h
day13/solution/src/: day13_solution.cpp
day14/: CMakeLists.txt
day14/main/src/: day14_main.cpp
day14/solution/include/: day14_solution.h
day14/solution/src/: day14_solution.cpp
day15/: CMakeLists.txt
day15/main/src/: day15_main.cpp
day15/solution/include/: day15_solution.h
day15/solution/src/: day15_solution.cpp
day16/: CMakeLists.txt
day16/main/src/: day16_main.cpp
day16/solution/include/: day16_solution.h
day16/solution/src/: day16_solution.cpp
day17/: CMakeLists.txt
day17/main/src/: day17_main.cpp
day17/solution/include/: day17_solution.h
day17/solution/src/: day17_solution.cpp
day18/: CMakeLists.txt
day18/main/src/: day18_main.cpp
day18/solution/include/: day18_solution.h
day18/solution/src/: day18_solution.cpp
day19/: CMakeLists.txt
day19/main/src/: day19_main.cpp
day19/solution/include/: day19_solution.h
day19/solution/src/: day19_solution.cpp
day20/: CMakeLists.txt
day20/main/src/: day20_main.cpp
day20/solution/include/: day20_solution.h
day20/solution/src/: day20_solution.cpp
day21/: CMakeLists.txt
day21/main/src/: day21_main.cpp
day21/solution/include/: day21_solution.h
day21/solution/src/: day21_solution.cpp
day22/: CMakeLists.txt
day22/main/src/: day22_main.cpp
day22/solution/: CMakeLists.txt
day22/solution/include/: day22_solution.h
day22/solution/src/: day22_solution.cpp
day23/: CMakeLists.txt
day23/main/src/: day23_main.cpp
day23/solution/include/: day23_solution.h
day23/solution/src/: day23_solution.cpp
day24/: CMakeLists.txt
day24/main/src/: day24_main.cpp
day24/solution/include/: day24_solution.h
day24/solution/src/: day24_solution.cpp
day25/: CMakeLists.txt
day25/main/src/: day25_main.cpp
day25/solution/include/: day25_solution.h
day25/solution/src/: day25_solution.cpp
template/main/src/: day01_main.cpp
template/solution/src/: day01_solution.cpp
